--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "jspdf": "^2.5.2",
     "konva": "^10.0.9",
+    "lucide-react": "^0.554.0",
     "nanoid": "^5.1.6",
     "pdfjs-dist": "^5.4.394",
     "react": "^19.2.0",
