--- a/env.sample
+++ b/env.sample
@@ -1,3 +1,3 @@
 VITE_API_URL=https://twod-autocad-readyproduct-lbhe.onrender.com/api
-VITE_APP_NAME=KAB 2D Design Tool
+VITE_APP_NAME=KABS 2D Design Tool
 
